--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react95": "^3.4.1",
     "styled-components": "^5.2.1",
     "truffle": "^5.1.10",
+    "truffle-hdwallet-provider": "^1.0.17",
     "typescript": "^4.1.2",
     "ui-neumorphism": "^1.1.0",
     "web3": "1.0.0-beta.55"
